--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,9 @@ replace = __version__ = {new_version}
 universal = 1
 
 [flake8]
-exclude = docs
+exclude = docs, .git, __pycache__, build, dist
+ignore = E501
+max_complexity = 25
 
 [aliases]
 # Define setup.py command aliases here
