bulk import creation started

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,8 +16,10 @@ universal = 1
 
 [flake8]
 exclude = docs, .git, __pycache__, build, dist
-ignore = E501
-max_complexity = 25
+max-complexity = 25
+max-line-length = 120
+ignore = E203, E266, E501, W503, E501
+select = B,C,E,F,W,T4,B9
 
 [aliases]
 
