removed local imports form __init__.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ tag = False
 search = version={current_version}
 replace = {new_version}
 
-[bumpversion:file:dnac_pnp/__init__.py]
+[bumpversion:file:dnac_pnp/__version__.py]
 search = __version__ = {current_version}
 replace = {new_version}
 
