--- a/sample_data/catalog/DeviceImport.csv.example
+++ b/sample_data/catalog/DeviceImport.csv.example
@@ -1,4 +1,2 @@
 Serial_Number, Product_ID, Site_Name, Name
-FOC1849Z2JL, WSC2960C, Global/Demo_DE/B1/F3, MainRouter
-AAA1111K3MX, C891FK9, Global/Demo_DE/B1/F3, HallwaySwitch
-FOC1849Z2KK, WSC2960C, Global/Demo_DE/B1/F3, MainRouter2
+FOC2246T582,WS-C3560CX-8PC-S, "Global/DD Germany/DD MUC", pnp-test-sw01
