--- a/sample_data/catalog/DeviceImport.csv.example
+++ b/sample_data/catalog/DeviceImport.csv.example
@@ -1,2 +1,2 @@
-Serial_Number, Product_ID, Site_Name, Name
-FOC2246T582,WS-C3560CX-8PC-S, "Global/DD Germany/DD MUC", pnp-test-sw01
+serial_number, product_id, site_name, name, template_name, host_name, vtp_domain, vtp_version
+FOC2246T582, WS-C3560CX-8PC-S, Global/DD Germany/DD MUC, pnp-test-sw01, Test-Day0-Template, switch001, vtp001, 1
