--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,11 @@ replace = {new_version}
 search = __version__ = {current_version}
 replace = {new_version}
 
+[bumpversion:part:release]
+values =
+  alpha
+  beta
+
 [bdist_wheel]
 universal = 1
 
