--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 1.0.1-beta
+current_version = 1.0.1b
 commit = True
 tag = False
 
@@ -12,9 +12,9 @@ search = __version__ = {current_version}
 replace = {new_version}
 
 [bumpversion:part:release]
-values =
-  alpha
-  beta
+values = 
+	alpha
+	beta
 
 [bdist_wheel]
 universal = 1
