--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,11 +1,11 @@
-bumpversion==0.5.3
-wheel==0.33.4
-watchdog==0.9.0
-flake8==3.7.8
-tox==3.5.2
-coverage==4.5.1
-Sphinx==1.8.5
-twine==1.12.1
-isort==4.3.21
-recommonmark==0.6.0
-sphinx_rtd_theme==0.4.3
+bumpversion>=0.5.3
+wheel>=0.33.4
+watchdog>=0.9.0
+flake8>=3.7.8
+tox>=3.5.2
+coverage>=4.5.1
+Sphinx>=1.8.5
+twine>=1.12.1
+isort>=4.3.21
+recommonmark>=0.6.0
+sphinx_rtd_theme>=0.4.3
