--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ pyyaml>=5.1.1
 tabulate>=0.8.3
 netmiko>=2.4.1
 tqdm>=4.36.1
+Sphinx>=3.2.1
+recommonmark>=0.6.0
+sphinx_rtd_theme>=0.5.0
+sphinx-copybutton>=0.3.0
